--- a/py-weather/pyproject.toml
+++ b/py-weather/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Borys Vengerov <borys.vengerov@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "^7.1.2"
+funcy = "^1.14"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
